public/css/admin_styles.css
.margin-right-20 {
  margin-right: 20px;
}
.margin-left-20{
  margin-left: 20px;
}
textarea {
  width: 100%;
}
img{
  max-width: 100%;
}
/************* Replays management ***************/
.video-link-wrapper iframe{
  max-width: 100%;
}
/************* Banners management ***************/
.banners tr td{
  vertical-align: middle;
}
.banners .img-preview{
  max-width: 100%;
  margin: 0 auto;
}
.banner-img-wrapper{
  padding: 10px;
}
.banner-img-wrapper img{
  max-width: 100%;
}
/************* Footer management ***************/
.site-footer .box-header {
  display: flex;
  align-items: center;
}
.site-footer .box-header h3 {
  margin-right: 10px;
}
/************* Topics ***************/
.preview-image-wrapper img {
  max-width: 100%;
  margin: 0 auto;
}
/************* Menu ***************/
.sidebar-menu > li > a {
  padding: 8px 5px 8px 15px;
  display: block;
}
/***************  SCEditor plugin ***************************/
.sceditor-button-countries div {
  background: url('../flags/editor/ru.png') no-repeat center center !important;
}
.sceditor-button-races div{
  background: url('../images/smiles/terran.gif') no-repeat center center !important;
}
.sceditor-race-picker img{
  display: inline-block;
  margin-right: 8px;
  cursor: pointer;
}
.sceditor-race-picker img:last-child{
  margin-right: 0;
}
.sceditor-button-countries div span.flag-icon{
  margin-right: 1px !important;
  display: inline-block !important;
  margin-top: 1px !important;
}
.sceditor-container span.flag-icon{
  margin-right: 3px;
  margin-top: 3px;
  cursor: pointer;
}
.sceditor-container, .sceditor-container div, div.sceditor-dropdown, div.sceditor-dropdown div{
  z-index: unset;
}
div.sceditor-dropdown{
  z-index: 4000!important;
}
.sceditor-button-upload div {
  background: url('../images/icons/upload.png') no-repeat center center !important;
  background-size: cover !important;
}
/******************************************/

.navbar-nav>.user-menu>.dropdown-menu>.user-footer div .btn{
  padding: 6px 9px !important;
}
.navbar-nav>.user-menu>.dropdown-menu>.user-footer .pull-center{
  float: left;
  margin-left: 4px;
}



/* upload overlay */
body.upload-overlay-open{
  overflow: hidden;

}
body .upload-overlay{
  display:none;
}
body.upload-overlay-open .upload-overlay {
  display: inline-flex;
  position: fixed;
  height: 100%;
  background: rgba(0,0,0,0.25);
  width: 100%;
  z-index: 9999;
  top: 0;
  overflow-y: hidden;
}

body.upload-overlay-open .upload-overlay .showImages{
  width: 960px;
  height: 515px;
  margin: auto;
  border: solid 1px gray;
  background: white;
  position: relative;
  display: inline-block;
  
}
body.upload-overlay-open .upload-overlay .open_img {
  padding: 5px 15px;
  margin: 5px 15px 5px;
  float: left;
}
.upload-overlay span.close_overlay {
  background: url(../images/icons/close.png) no-repeat center center;
  background-size: 20px;
  width: 20px;
  height: 20px;
  padding: 10px;
  border: solid 1px #2f2f2f;
  float: right;
  border-radius: 50%;
  margin: 15px;
  cursor: pointer;
}
.upload-overlay span.close_overlay:hover{
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.5);
}

body.upload-overlay-open .upload-overlay .showImages .images_wrapper label{
  font-size: 16px;
  padding: 15px;
  font-weight: 600;
}
body.upload-overlay-open .upload-overlay .showImages .images_wrapper .images {
  display: inline-block;
  text-align: center;
  overflow-y: scroll;
  height: 400px;
  width: 100%;
  padding: 0 10px;
}

body.upload-overlay-open .upload-overlay .showImages .images_wrapper .images .prev_image{
  width: 150px;
  box-shadow: 1px 1px 12px 1px rgba(0,0,0,0.2);
  display: inline-grid;
  position: relative;
  min-height: 150px;
  vertical-align: middle;
  margin: 2px 0;
}
/* body.upload-overlay-open .upload-overlay .showImages .images_wrapper .images .prev_image img{
  width: auto;
  text-align: center;
  margin: auto;
  max-height: 145px;
}
body.upload-overlay-open .upload-overlay .showImages .images_wrapper .images .prev_image input{
  display: none
} */


.prev_image input[type="checkbox"][id^="cb"] {
  display: none;
}

.prev_image label {
  border: 1px solid #fff;
  padding:0px !important;
  display: inline-grid;
  position: relative;
 
  cursor: pointer;
  height: 145px;
  margin: auto;
}

.prev_image label:before {
  background-color: white;
  color: white;
  content: " ";
  display: block;
  border-radius: 50%;
  border: 1px solid grey;
  position: absolute;
  top: -5px;
  left: -5px;
  width: 25px;
  height: 25px;
  text-align: center;
  line-height: 28px;
  transition-duration: 0.4s;
  transform: scale(0);
}

 .prev_image label img {

  transition-duration: 0.2s;
  transform-origin: 50% 50%;
  width: auto;
  text-align: center;
  margin: auto;
  max-height: 145px;
}

:checked 
+ label {
  border: solid 1px #0052ff !important;
}
:checked 
+ label:before {
  background-repeat: no-repeat;
  background-image: url(../images/icons/checkmark.png);
  /* content: '\2713';
  color: #54c438; */
  transform: scale(1);
  background-size: 25px;
}

:checked 
+ label img {
  /* transform: scale(0.9); */
  box-shadow: 0 0 5px #333;
}

div.sceditor-dropdown.sceditor-uploadimage .prev_imgs {
  cursor: pointer;
  color: #2f6696;
  position: absolute;
  right: 10px;
  border: solid 1px #949494;
  background: #ececec;
  border-radius: 3px;
  padding: 5px 10px;
}

